--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "unstated-next": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
